2004-04-04  Joe English  <jenglish@users.sourceforge.net>
	* unix/tkUnixWm.c: Fix for bug #915350  "Tk sets min, max size in
	WM_HINTS when it shouldn't" and #922336 "Tk apps have no maximize
	window button under KDE-3.2.1"

2004-03-31  Jim Ingham  <jingham@apple.com>

	* tkMacOSXCarbonEvents.c (AppEventHandlerProc): Handle the 
	kEventAppHidden and kEventAppShown events.
	(TkMacOSXInitCarbonEvents): Register for the above events.
	* tkMacOSXKeyEvent.c (TkMacOSXProcessKeyboardEvent): Steal
	the Command-H menu key event and allow the Application
	handler to have it.  This is currently the only way to get
	the Hide behavior to work. [Bug 917557]

	* tkMacOSMenus.c (TkMacOSXHandleMenuSelect): Remove the Quit menu
	handler - this was for the Quit item in the File menu, but it doesn't
	belong there.
	(TkMacOSXInitMenus): Remove the Quit menu item from the File menu.

	* tkMacOSXMenu.c (EventuallyInvokeMenu): Report errors from invoking
	menu commands as background errors. [Bug 220871]
	
2004-03-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkImgPhoto.c:	Removed outdated #include's of the tclMath.h
	* generic/tkScale.c:	header file.  All tk*Port.h files have long
	had a #include <math.h>, and other parts of Tk routinely make use
	of libm-supplied math routines.

2004-03-30  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclets.r (removed): obsolete holdover from mac classic.

2004-03-26  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPPM.c (ReadPPMStringHeader): Code to read PPM/PGM data
	(StringReadPPM, StringMatchPPM): from strings/bytearrays. [FRQ 540375]

2004-03-26  Don Porter  <dgp@users.sourceforge.net>

	* unix/tcl.m4:	Replaced -Wno-strict-alias with more portable
	-fno-strict-alias alternative.

	* README:		Bump version to 8.5a2.
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.57
	* win/configure:
