@@ -1,4 +1,11 @@
+2004-04-16  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/bgerror.tcl (bgerror): rework to only set -topmost bit
+	on Windows if necessary.  Also use existing ::tk functions for
+	placing dialog and managing focus/grab.
+
 2004-04-04  Joe English  <jenglish@users.sourceforge.net>
+
 	* unix/tkUnixWm.c: Fix for bug #915350  "Tk sets min, max size in
 	WM_HINTS when it shouldn't" and #922336 "Tk apps have no maximize
 	window button under KDE-3.2.1"
